fixed line spacing and animations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,10 @@ p {
     color: rgb(50, 60, 60);
 }
 p {
-    line-height: 0.5rem;
+    margin-bottom: 0;
 }
 form {
-    margin-bottom: 1rem;
+    margin-bottom: 0.25rem;
 }
 
 .navbar {
